feat: refactor deserialization, use JsonNode to deserialize JSON data